--- a/docs/developer-docs/6.0.x/graphql/reference.mdx
+++ b/docs/developer-docs/6.0.x/graphql/reference.mdx
@@ -40,7 +40,7 @@ class GraphQLReference implements GraphQLSchemaFactory.Interface {
             // function that returns the resolver function and receives the dependencies as arguments
             resolver: (...dependenciesInOrderTheyWereAssigned) => {
                 return async ({parent, context, info, args}) => {
-                    return "null";
+                    return "Hello World!";
                 };
             }
         });
