--- a/docs/developer-docs/6.0.x/background-tasks/about.mdx
+++ b/docs/developer-docs/6.0.x/background-tasks/about.mdx
@@ -9,10 +9,41 @@ import {Alert} from "@/components/Alert";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
-- TBD
+- What are Background Tasks?
+- What methods are available in a task definition?
+- When to use lifecycle hooks?
 
 </Alert>
 
 ## Overview
 
-TBD
+Background Tasks allow you to run long operations asynchronously without blocking your application. You can process batches, migrate data, or perform bulk operations in the background.
+
+## Available Methods
+
+When creating a background task, you implement the following methods:
+
+### Core Methods
+
+- **`run()`** - The main method where your task logic executes. Required.
+- **`createInputValidation()`** - Validates the input data before the task runs. Optional.
+
+### Lifecycle Hooks
+
+These hooks are called at different stages of task execution:
+
+- **`onBeforeTrigger()`** - Called before the task is triggered.
+- **`onDone()`** - Called when the task completes successfully.
+- **`onError()`** - Called when the task fails with an error.
+- **`onAbort()`** - Called when the task is manually aborted.
+- **`onMaxIterations()`** - Called when the task reaches the maximum iteration limit.
+
+## Task Responses
+
+Inside the `run()` method, you control how the task behaves by returning different responses:
+
+- **`controller.response.done()`** - Task completed successfully.
+- **`controller.response.continue()`** - Task needs more time, will resume in the next iteration.
+- **`controller.response.error()`** - Task encountered an error and should stop.
+- **`controller.response.aborted()`** - Task was manually stopped.
+
