--- a/docs/developer-docs/6.0.x/background-tasks/about.mdx
+++ b/docs/developer-docs/6.0.x/background-tasks/about.mdx
@@ -19,6 +19,8 @@ import {Alert} from "@/components/Alert";
 
 Background Tasks allow you to run long operations asynchronously without blocking your application. You can process batches, migrate data, or perform bulk operations in the background.
 
+To create a background task, you implement the `TaskDefinition.Interface` and register it using `TaskDefinition.createImplementation()`.
+
 ## Available Methods
 
 When creating a background task, you implement the following methods:
@@ -40,10 +42,17 @@ These hooks are called at different stages of task execution:
 
 ## Task Responses
 
-Inside the `run()` method, you control how the task behaves by returning different responses:
+Inside the `run()` method, you receive a `controller` object that helps you control task execution. You use it to return different responses:
 
 - **`controller.response.done()`** - Task completed successfully.
 - **`controller.response.continue()`** - Task needs more time, will resume in the next iteration.
 - **`controller.response.error()`** - Task encountered an error and should stop.
 - **`controller.response.aborted()`** - Task was manually stopped.
+
+## Controller Runtime Methods
+
+The controller also provides runtime methods to check the task's execution state:
+
+- **`controller.runtime.isAborted()`** - Returns `true` if the task was manually aborted.
+- **`controller.runtime.isCloseToTimeout()`** - Returns `true` if the task is running out of time. Use this to return `continue()` and preserve your progress.
 
