--- a/docs/developer-docs/6.0.x/tasks/about.mdx
+++ b/docs/developer-docs/6.0.x/tasks/about.mdx
@@ -1,7 +1,7 @@
 ---
 id: ifggwkus
 title: About
-description: About Background Tasks
+description: About Tasks
 ---
 
 
@@ -9,7 +9,7 @@ import {Alert} from "@/components/Alert";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
-- What are Background Tasks?
+- What are Tasks?
 - What methods are available in a task definition?
 - When to use lifecycle hooks?
 
@@ -17,7 +17,7 @@ import {Alert} from "@/components/Alert";
 
 ## Overview
 
-Background Tasks allow you to run long operations asynchronously without blocking your application. You can process batches, migrate data, or perform bulk operations in the background.
+Tasks allow you to run long operations asynchronously without blocking your application. You can process batches, migrate data, or perform bulk operations in the background.
 
 To create a background task, you implement the `TaskDefinition.Interface` and register it using `TaskDefinition.createImplementation()`.
 
