--- a/docs/developer-docs/6.0.x/tasks/reference.mdx
+++ b/docs/developer-docs/6.0.x/tasks/reference.mdx
@@ -1,7 +1,7 @@
 ---
 id: ifggwkus
 title: Reference
-description: Background Tasks Reference
+description: Tasks Reference
 ---
 
 
@@ -19,7 +19,7 @@ import {Alert} from "@/components/Alert";
 
 ## Overview
 
-Background Tasks in Webiny allow you to execute long-running operations asynchronously without blocking the main request-response cycle. By implementing the `TaskDefinition.Interface` and registering it with `TaskDefinition.createImplementation()`, you can create custom background tasks that handle complex operations like batch processing, data migrations, or bulk actions.
+Tasks in Webiny allow you to execute long-running operations asynchronously without blocking the main request-response cycle. By implementing the `TaskDefinition.Interface` and registering it with `TaskDefinition.createImplementation()`, you can create custom background tasks that handle complex operations like batch processing, data migrations, or bulk actions.
 
 A task definition includes:
 
@@ -42,7 +42,7 @@ This pattern keeps background tasks modular, testable, and easy to monitor.
 ## Usage Example
 
 ```typescript
-import { TaskDefinition } from "webiny/api/background-tasks";
+import { TaskDefinition } from "webiny/api/tasks";
 import { GetModelUseCase } from "webiny/api/cms/model";
 import { PublishEntryUseCase } from "webiny/api/cms/entry";
 
@@ -64,7 +64,7 @@ class PublishEntriesBackgroundTask implements TaskDefinition.Interface {
     // id of a task - must be unique across the entire system
     public readonly id = "publishEntriesBackgroundTask";
     // title of the task - to be displayed in a list of tasks
-    public readonly title = "Publish Entries Background Task";
+    public readonly title = "Publish Entries Task";
     // description of the task - a brief explanation of what the task does
     public readonly description = "A background task to publish CMS entries.";
     // maximum number of iterations before the task goes into the error state
