--- a/docs/developer-docs/6.0.x/tasks/management.mdx
+++ b/docs/developer-docs/6.0.x/tasks/management.mdx
@@ -1,7 +1,7 @@
 ---
 id: mk20cz91
 title: Management
-description: Management Task
+description: Task Management
 ---
 
 
@@ -125,6 +125,10 @@ query ListBackgroundTaskLogs {
 
 ### Trigger a Task
 
+Use this mutation to start a task execution with custom input parameters. The task will be queued and executed asynchronously. You can track its progress using the task ID returned in the response.
+
+```graphql
+mutation TriggerATask {
   backgroundTasks {
     triggerTask(definition: testingRun, input: {
       someVariableForTestingRunTaskToReceive: "someValue",
@@ -187,6 +191,8 @@ mutation AbortATask {
 
 ### Triggering a Task Programmatically
 
+Use the `TaskService` to trigger tasks directly from your backend code. This is useful when you need to start background tasks as part of your application logic, such as after a user action or during a scheduled process. You can specify the task definition ID, custom input data, delay, parent task relationship, and a display name.
+
 ```typescript
 import { TaskService } from "webiny/api/tasks";
 const service = // resolved TaskService
@@ -206,6 +212,8 @@ const result = service.trigger({
 ```
 
 ### Aborting a Task Programmatically
+
+Use the `TaskService` to abort a running task from your backend code. This is useful when you need to stop tasks programmatically based on application state or business logic. Provide the task ID and optionally a message explaining why the task is being aborted.
 
 ```typescript
 import { TaskService } from "webiny/api/tasks";
