--- a/docs/developer-docs/6.0.x/basic/result.mdx
+++ b/docs/developer-docs/6.0.x/basic/result.mdx
@@ -4,15 +4,6 @@ title: Result
 description: About Result
 ---
 
-
-
-
-
-
-
-
-
-
 import {Alert} from "@/components/Alert";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
@@ -109,6 +100,8 @@ export interface MyMethod {
 And then you can implement the method like this:
 
 ```typescript
+import { Result } from "webiny/api";
+
 const myMethod: MyMethod = async (params) => {
     try {
         const operationResult = await someOperation(params.id);
