feat: mutation graphql example

--- a/docs/developer-docs/6.0.x/graphql/example.mdx
+++ b/docs/developer-docs/6.0.x/graphql/example.mdx
@@ -30,7 +30,7 @@ The example demonstrates a complete implementation of a custom GraphQL query tha
 This pattern follows Webiny architecture principles, keeping the GraphQL layer thin and delegating business logic to dedicated use cases. The resolver functions receive injected dependencies and handle the communication between the GraphQL API and your application services.
 
 
-## Code Example
+## Query Code Example
 
 ```typescript
 import { GraphQLSchemaFactory } from "webiny/api/graphql";
@@ -116,5 +116,89 @@ class ListCmsEntriesGraphQL implements GraphQLSchemaFactory.Interface {
     }
 }
 
-export default ListCmsEntriesGraphQL;
+export default GraphQLSchemaFactory.createImplementation({
+    implementation: ListCmsEntriesGraphQL,
+    dependencies: [],
+});
+```
+
+
+## Mutation Code Example
+
+```typescript
+import { GraphQLSchemaFactory } from "webiny/api/graphql";
+import { GetModelUseCase } from "webiny/api/cms/model";
+import { CreateEntryUseCase } from "webiny/api/cms/entry";
+
+interface ILogMyClickArgs {
+    id: string;
+    ip: string;
+}
+
+class LogMyClickGraphQL implements GraphQLSchemaFactory.Interface {
+    public async execute(builder: GraphQLSchemaFactory.SchemaBuilder): GraphQLSchemaFactory.Return {
+        builder.addTypeDefs(/* GraphQL */ `
+            type LogMyClickResponseItem {
+                id: ID!
+                ip: String!
+                createdOn: String!
+            }
+            type LogMyClickResponse {
+                data: LogMyClickResponseItem
+                error: CmsError
+            }
+
+            extend type Mutation {
+                logMyClick(id: ID!, ip: String!): LogMyClickResponse!
+            }
+        `);
+
+        builder.addResolver<ILogMyClickArgs>({
+            path: "Mutation.logMyClick",
+            dependencies: [GetModelUseCase, CreateEntryUseCase],
+            resolver(
+                getModel: GetModelUseCase.Interface,
+                createEntry: CreateEntryUseCase.Interface
+            ) {
+                return async ({ args }) => {
+                    const modelResult = await getModel.execute("logMyClickModel");
+
+                    if (modelResult.isFail()) {
+                        return {
+                            error: modelResult.error,
+                            data: null,
+                            meta: null
+                        };
+                    }
+                    const model = modelResult.value;
+
+                    const result = await createEntry.execute<ILogMyClickArgs>(model, {
+                        values: {
+                            id: args.id,
+                            ip: args.ip
+                        }
+                    });
+                    if (result.isFail()) {
+                        return {
+                            error: result.error,
+                            data: null,
+                            meta: null
+                        };
+                    }
+                    return {
+                        data: result.value,
+                        error: null
+                    };
+                };
+            }
+        });
+
+        return builder;
+    }
+}
+
+export default GraphQLSchemaFactory.createImplementation({
+    implementation: LogMyClickGraphQL,
+    dependencies: [],
+});
 ```
