chore: private model update

--- a/docs/developer-docs/6.0.x/headless-cms/examples/private-model.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/examples/private-model.mdx
@@ -13,7 +13,7 @@ import {Alert} from "@/components/Alert";
 - What is a private model and how does it differ from public models?
 - How to create a private model using the Model Builder?
 - When to use private models?
-
+- How to access data from private models?
 </Alert>
 
 ## Overview
